--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "discord.js": "12.2.0",
     "firebase-admin": "^8.9.2",
-    "node-vk-sdk": "1.1.3",
-    "request": "2.81.0"
+    "node-vk-sdk": "^1.1.3"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -19,6 +18,7 @@
     "@types/node": "^13.9.5",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "ts-node": "^8.8.1"
+    "ts-node": "^8.8.1",
+    "typescript": "^3.9.7"
   }
 }
