--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "./dist/main.js",
   "author": "Sandorik00",
   "dependencies": {
-    "discord.js": "12.2.0",
+    "@types/node-fetch": "^2.5.7",
+    "discord.js": "12.3.1",
     "firebase-admin": "^8.9.2",
+    "node-fetch": "^2.6.1",
     "node-vk-sdk": "^1.1.3"
   },
   "devDependencies": {
