--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "discord.js": "12.3.1",
     "firebase-admin": "^8.9.2",
     "node-fetch": "^2.6.1",
-    "node-vk-sdk": "^1.1.3"
+    "node-vk-sdk": "^1.1.3",
+    "steamapi": "^2.1.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
