--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@types/node-fetch": "^2.5.7",
-    "discord.js": "12.3.1",
+    "discord.js": "^12.4.1",
     "firebase-admin": "^8.9.2",
     "node-fetch": "^2.6.1",
     "node-vk-sdk": "^1.1.3",
